--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,7 @@
   ],
   "rules": {
     "semi": "error",
-    "no-unused-vars": "warn",
-    "no-console": "warn"
+    "no-unused-vars": "error",
+    "no-console": "error"
   }
 }
